<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="testCertificateInformation"><![CDATA[For <b>electrical installations</b>, this certifies that the electrical installation, to the extent it is affected by the electrical work, has been tested to ensure that it is electrically safe and is in accordance with the requirements of the wiring rules and any other standard applying under the Electrical Safety Regulation 2013 to the electrical installation.\nFor <b>electrical equipment</b>, this certifies that the electrical equipment, to the extent it is affected by the electrical work, is electrically safe.]]></string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="exampleDate">Date</string>
    <string name="submit">Submit</string>
    <string name="document_completed_on">Document completed on:</string>
    <string name="digital_signature">Digital Signature</string>
    <string name="name">Name</string>
    <string name="mobile">mobile</string>
    <string name="electrical_contractor_phone_number">Electrical contractor phone number</string>
    <string name="name_on_contractor_license">Name on contractor license</string>
    <string name="ElectricalLicenseExample">000000</string>
    <string name="date_of_test">* Date of test:</string>
    <string name="work_completed">Work completed:</string>
    <string name="please_include_site_address_for_electrical_installation_work_if_different_from_above">(Please include site address for electrical installation work if different from above)</string>
    <string name="electical_installation_equipment_tested">Electical installation / equipment tested*</string>
    <string name="postcode">Postcode</string>
    <string name="suburb_town">Suburb/Town</string>
    <string name="street">Street</string>
    <string name="address">Address*:</string>
    <string name="surname">Surname</string>
    <string name="given_name_s">Given name/s</string>
    <string name="title">Title</string>
    <string name="work_performed_for">Work performed for:</string>
    <string name="certificate_of">Certificate of:</string>
    <string name="testing_certificate">Testing Certificate</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="na">NA</string>
    <string name="service_clearance_is_satisfactory">Service clearance is satisfactory</string>
    <string name="point_of_attachment_satisfactory">Point of attachment satisfactory</string>
    <string name="switchboard_position_satisfactory">Switchboard position satisfactory</string>
    <string name="men_in_position">MEN in position</string>
    <string name="earth_electrode_and_10_main_earth_satisfactory">Earth electrode and \n main earth satisfactory</string>
    <string name="property_poles_in_good_condition_10_and_aerial_line_satisfactory">Property poles in good condition \n and aerial line satisfactory</string>
    <string name="aerial_cables_insulated_when_required">Aerial cables insulated when required</string>
    <string name="cables_subject_to_damage_10_adequately_protected">Cables subject to damage \n adequately protected</string>
    <string name="cables_in_thermal_insulation_provided_10_with_suitable_electrical_protection">Cables in thermal insulation provided \n with suitable electrical protection</string>
    <string name="lights_have_adequate_clearance_10_from_flammable_material_10_or_thermal_insulation">Lights have adequate clearance \n from flammable material \n or thermal insulation</string>
    <string name="equipment_is_fixed_and_10_adequately_protected_from_weather">Equipment is fixed and \n adequately protected from weather</string>
    <string name="electrical_accessories_in_10_good_condition_10_each_room_to_be_checked">Electrical accessories in \n good condition. \n Each room to be checked</string>
    <string name="clearances_from_water_10_containers_adequate">Clearances from water \ncontainers adequate</string>
    <string name="stove_is_stable">Stove is stable</string>
    <string name="protection_devices_for_cable">Protection devices for cable</string>
    <string name="rcd_on_circuits">RCD on circuits</string>
    <string name="switchboard_makings_adequate">Switchboard makings adequate</string>
    <string name="earthing_of_sub_boards_10_and_in_outbuildings_correct">Earthing of sub-boards \n and in outbuildings correct</string>
    <string name="equipment_in_pool_zone_correct_10_and_protected_by_rcd">Equipment in pool zone correct \n and protected by RCD</string>
    <string name="room_by_room_inspection">ROOM BY ROOM INSPECTION</string>
    <string name="front_entrance_stairwell">Front entrance/stairwell</string>
    <string name="lounge_1">Lounge 1</string>
    <string name="lounge_2">Lounge 2</string>
    <string name="kitchen_1">Kitchen 1</string>
    <string name="kitchen_2">Kitchen 2</string>
    <string name="tv_room_1">TV room 1</string>
    <string name="tv_room_2">TV room 2</string>
    <string name="study_1">Study 1</string>
    <string name="study_2">Study 2</string>
    <string name="bathroom_1">Bathroom 1</string>
    <string name="bathroom_2">Bathroom 2</string>
    <string name="garage_1">Garage 1</string>
    <string name="garage_2">Garage 2</string>
    <string name="bedroom_1">Bedroom 1</string>
    <string name="bedroom_2">Bedroom 2</string>
    <string name="bedroom_3">Bedroom 3</string>
    <string name="bedroom_4">Bedroom 4</string>
    <string name="bedroom_5">Bedroom 5</string>
    <string name="visual_inspection_checklist">Visual Inspection Checklist</string>
    <string name="role">Role</string>
    <string name="incident_report">Incident Report</string>
    <string name="incident">Incident</string>
    <string name="date_and_time_of_incident">Date and Time of Incident</string>
    <string name="name_s_of_person_s_involved_in_the_incident">Name\'s of person/s involved in the incident</string>
    <string name="description_of_incident">Description of Incident:</string>
    <string name="address_textview">address textview</string>
    <string name="required_documents">Required Documents</string>
    <string name="visual_inspection_document">Visual Inspection Document</string>
    <string name="incident_report_document">Incident Report Document</string>
    <string name="witnesses_include_contact_details">Witnesses (Include contact details):</string>
    <string name="reporting_of_the_incident">Reporting of the incident:</string>
    <string name="description_of_actions_to_be_taken">Description of actions to be taken:</string>
    <string name="how_reported_this_form_in_person_email_phone">How reported (This form, in person, email, phone):</string>
    <string name="electrical_safety_office">Electrical Safety Office</string>
    <string name="follow_up_action">Follow Up Action</string>
    <string name="incident_reported_to_please_tick">Incident Reported to: (please tick)</string>
    <string name="pinnacle_office_dave_admin">Pinnacle Office - Dave/Admin</string>
    <string name="was_treatment_received_following_the_injury_illness">Was treatment received following the injury/illness?</string>
    <string name="enter_hazard">Enter Hazard</string>
    <string name="swms">SWMS</string>
    <string name="site_specific_risk_assessment_form">Site Specific Risk Assessment Form</string>
    <string name="employee_name">Employee Name:</string>
    <string name="employee">Employee</string>
    <string name="i_certify_that_the_above_control_measures_have_been_implemented_and_the_site_is_safe">I certify that the above control measures have been implemented and the site is safe.</string>
    <string name="add_job">Add Job</string>
    <string name="heirarchy_of_control">Hierarchy \n of \n control</string>
    <string name="workplace_location">Workplace location:</string>
    <string name="job_number">Job Number</string>
    <string name="post_code">Post Code</string>
    <string name="how_many_hazards">How many hazards? (1 – 7)</string>
    <string name="how_many_employees_1_7">How many Employees? (1 – 7)</string>
    <string name="state">State:</string>
    <string name="form_completed_by">Form completed by</string>
    <string name="electical_contracting_license_number">Electical Contracting License Number</string>
    <string name="testing_and_compliance">Testing and Compliance</string>
    <string name="testing_and_safety">Testing and Safety</string>
    <string name="inspection_activity">INSPECTION ACTIVITY</string>
</resources>