<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".TestingCertificateDocumentActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/testing_certificate"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/certificate_of"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/testingAndComplianceCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/testing_and_compliance" />

                <CheckBox
                    android:id="@+id/testingAndSafetyCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/testing_and_safety" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/work_performed_for"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nameTitleEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/title"
                android:inputType="text"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                android:autofillHints="" />

            <EditText
                android:id="@+id/nameGivenNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:hint="@string/given_name_s"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63" />

            <EditText
                android:id="@+id/nameSurnameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/surname"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                tools:ignore="VisualLintTextFieldSize" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/address"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/addressStreetEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:hint="@string/street"
                android:inputType="text"
                android:minHeight="48dp"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/addressSuburbEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:hint="@string/suburb_town"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingEnd="100sp"
                android:textColorHint="#8D6E63"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/addressPostCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:hint="@string/postcode"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                tools:ignore="VisualLintTextFieldSize" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/electical_installation_equipment_tested"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/please_include_site_address_for_electrical_installation_work_if_different_from_above"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/workCompletedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/work_completed"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="#8D6E63"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/date_of_test"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/chooseDateBtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exampleDate" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/electical_contracting_license_number"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/contractorLicenseNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:hint="@string/ElectricalLicenseExample"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#8D6E63"
                tools:ignore="VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name_on_contractor_license"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/contractorLicenseNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/name"
                android:textAlignment="center"
                android:inputType="text"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/electrical_contractor_phone_number"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/contractorLicenseMobileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/mobile"
                android:textAlignment="center"
                android:inputType="number"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />

        </LinearLayout>

        <TextView
            android:id="@+id/regulationInformationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/testCertificateInformation"
            tools:ignore="VisualLintLongText" />

        <EditText
            android:id="@+id/contractorFinalNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/name"
            android:textAlignment="center"
            android:inputType="text"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/digitalSignatureBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:onClick="digitalSignatureOnPressed"
                android:text="@string/digital_signature" />

            <ImageView
                android:id="@+id/signatureImageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignEnd="@+id/digitalSignatureBtn"
                android:layout_marginStart="2dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/baseline_check_circle_outline_24_white"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/document_completed_on"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button

                android:id="@+id/chooseDateBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/exampleDate" />
        </LinearLayout>


        <Button
            android:id="@+id/submitDocumentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:text="@string/submit"
            android:textSize="20sp"/>
    </LinearLayout>


</ScrollView>